# Hasher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
include/: hash.h
src/: hash.cpp  main.cpp
